--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "get-image-colors": "^4.0.0",
     "mongoose": "^6.0.12",
